fix: update high-contrast styles

--- a/packages/vscode-extension/src/webview/components/DeviceSelect.css
+++ b/packages/vscode-extension/src/webview/components/DeviceSelect.css
@@ -148,3 +148,7 @@
 .running-badge-button span::before {
   content: "Running";
 }
+
+.vscode-high-contrast .running-badge-button[variant="activity-bar-counter"] {
+  background-color: var(--swm-button-background);
+}
